v2.0.0
- MAJOR UPDATE: If you have developed Child Theme or plugin to extend older version of Suki, please read this documentation: ... and review your codes.

v1.3.6
- NEW: Template hooks - Before Hero (suki/frontend/before_hero).
- NEW: Template hooks - After Hero (suki/frontend/after_hero).
- NEW: WooCommerce - Add product taxonomy description as Content Header element.
- TWEAK: Page templates - Add Hero section on custom page templates (can be disabled via Page Settings).
- FIX: WooCommerce - Fix theme's breadcrumb on WooCommerce archive page.
- FIX: WooCommerce - Fix theme's breadcrumb on WooCommerce search results page.
- FIX: Minor CSS.

v1.3.5
- NEW: WooCommerce - Styles for WooCommerce widget blocks: Price Filter and Attribute Filter.
- FIX: Migration - Fix version migration.
- FIX: Breadcrumb - Error on blog front page.
- FIX: WooCommerce - Fix theme's breadcrumb on WooCommerce product page.
- FIX: WooCommerce - Disabled product gallery still takes space in the layout.
- FIX: Dynamic CSS - Headings typography settings CSS.

v1.3.4
- FIX: WooCommerce - Fix theme's breadcrumb for WooCommerce product and archive pages.

v1.3.3
- FIX: Blog - Pagination now showing.
- FIX: WooCommerce - Fix theme's breadcrumb for WooCommerce product pages.
- FIX: Migration - Fix version migration.

v1.3.2
- TWEAK: Breadcrumb - Improve breadcrumb on WooCommerce product pages, it will automatically detect "Shop" page title and use it in the breadcrumb.
- FIX: Hero - Hero section background mode on single post type pages.
- FIX: WooCommerce - Account page's avatar bug, not showing user's defined gravatar.
- FIX: WooCommerce - Product gallery width option.
- FIX: Gutenberg CSS.

v1.3.1
- NEW: Theme Support - Add Gutenberg "Custom Spacing" theme support (block padding options).
- NEW: Breadcrumb - Add new option: "Hide if home or current page is the only item" mode.
- FIX: Breadcrumb - Bug on singular pages.
- FIX: WooCommerce - Content header issue on Shop page.